refactor: Remove ViewerSession and related repository, mapper, and JPA entity to simplify the application