@@ -159,7 +159,8 @@ public class FFmpegTranscoderGateway implements TranscoderGateway {
     @Override
     public boolean isAvailable() {
         try {
-            Process process = Runtime.getRuntime().exec("ffmpeg -version");
+            ProcessBuilder pb = new ProcessBuilder("ffmpeg", "-version");
+            Process process = pb.start();
             int exitCode = process.waitFor();
             return exitCode == 0;
         } catch (Exception e) {
